--- a/Styles/store-single.css
+++ b/Styles/store-single.css
@@ -10,7 +10,9 @@ html{
 a{
     text-decoration: none;
 }
-
+.main{
+    width: 100%;
+}
 li,
 .row-five{
     list-style: none;
@@ -31,7 +33,7 @@ img ,
     display: flex;
 }
 .stores{
-    width: 120%;
+    width: 100%;
     margin-top: 1rem !important;
 }
 .stores ol{
