--- a/Styles/Store-List.css
+++ b/Styles/Store-List.css
@@ -34,11 +34,7 @@ html{
 .content-ct{
     display: flex;
     justify-content: space-between;
-    /* justify-content: space-around; */
-    /* background-color: #f0f3f2; */
-    /* height: 208px; */
     border-radius: 8px;
-    /* padding: 0 0 0 48px; */
     max-width: 1320px;
     line-height: 208px;
     justify-content: space-between !important;
@@ -48,14 +44,15 @@ html{
     text-align: start;
     border-radius: 8px;
 }
-.row-three{
-    /* padding-left: 3rem!important; */
-}
+
 .row-three p{
     font-size: 2.1875rem;
 }
 .bg-right{
-    padding: 24px 0;
+    /* padding: 24px 0; */
+    display: flex;
+    flex-direction: column;
+    text-align: center;
     
 }
 .second{
@@ -160,6 +157,9 @@ html{
 
 
 @media (max-width:768px){
+    img{
+        width: 100%;
+    }
     .row-three{
         width: 20%;
     }
@@ -168,6 +168,27 @@ html{
     }
     .content-ct{
         margin-left: -5%;
+    }
+    body{
+        margin: 0 !important;
+        text-align: center;
+    }
+    .bg-right{
+       display: flex;
+       justify-content: center;
+       flex-direction: column;
+       
+    }
+    .content-right{
+        text-align: left;
+    }
+    .content-ct{
+        padding: 0 2% ;
+        margin: 0 2%;
+    }
+    .row-three {
+        width: 100%;
+        text-align: left;
     }
 }
 @media (max-width:1024px) and (min-width:769px){
